syntax = "proto3";

package echo;

message EchoRequest {
    string text = 1;
}

message EchoResponse {
    string text = 1;
}

service EchoService {
    rpc Echo (EchoRequest) returns (EchoResponse) {};
}
